BRM-002  - auth api  - booking api (getting rooms)  - user repo  - booking repo  - both services  - dto layer  - exception  - request and response wrappers

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,12 +1,19 @@
 # include jdbc.conf
+logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
+logging.level.com.zaxxer.hikari=TRACE
 
 db {
-    host: "host"
-    user: "user"
-    password: "password"
-    driver: "driver"
+    driver: "org.postgresql.Driver"
+    url: "jdbc:postgresql://localhost:5432/postgres"
+    user: "postgres"
+    password: "booking-room-pass"
+    schema: "public"
 }
 
-liquebase {
+liquibase {
     changeLog: "src/main/resources/liquibase/main.xml"
+}
+
+server {
+    port: 8080
 }
